<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:orientation="vertical" android:padding="10px" android:background="#fff">
<ImageView android:id="@+id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/title"></ImageView><TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello" android:textSize="10pt" android:layout_marginBottom="10px" android:textColor="#000000" android:gravity="center_horizontal"/>

<TextView android:text="@string/notconfigured" android:id="@+id/TextView01" android:layout_height="wrap_content" android:gravity="center_horizontal" android:layout_width="fill_parent"></TextView><Button android:text="@string/configure" android:id="@+id/Button01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="480px" android:minWidth="480px"></Button>
<CheckBox android:text="@string/enablenotifications" android:id="@+id/CheckBox01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000000"></CheckBox>
<CheckBox android:text="@string/enablesound" android:id="@+id/CheckBox02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000000"></CheckBox>
<CheckBox android:text="@string/enablevibration" android:id="@+id/CheckBox03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000000"></CheckBox>







</LinearLayout>
